# htbam_notebooks

./: .gitignore  README.md  analysis_binding.ipynb  pyproject.toml
archive/: analysis_binding_august2025.ipynb  analysis_inhibition_august2025.ipynb  analysis_only_template_august2023.ipynb  analysis_template_august2023.ipynb
example_data/9_17_25/ic50_data/: d3_2_StandardSeries_Analysis.csv
example_data/9_17_25/mm_data/: d1_NADPH_500ms_StandardSeries_Analysis.csv  d3_6_StandardSeries_Analysis.csv  d3_6_StandardSeries_Analysis.csv.bz2  d3_TitrationSeries_Analysis.csv.bz2
htbam_notebooks/: analysis.ipynb  analysis_MM.ipynb  analysis_binding.ipynb  analysis_inhibition.ipynb  analysis_mm.ipynb  analysis_mm_units.ipynb  analysis_mm_units_adk.ipynb  process.ipynb  stitch.ipynb
htbam_notebooks/in_progress/: analysis_MM_old.ipynb  analysis_inhibition_Nick_altered.ipynb  analysis_inhibition_old_freitas_WIP.ipynb  analysis_new_simple_DFM.ipynb
in_progress/: analysis_MM_old.ipynb  analysis_binding_JP.ipynb  analysis_mm_multi_exposure.ipynb  analysis_new_simple_DFM.ipynb  process_binding_WIP.ipynb
src/htbam_notebooks/: process.ipynb  stitch.ipynb
