[tool.poetry]
name = "htbam-notebooks"
version = "0.4.0"
description = ""
authors = ["duncan-muir <muir.duncan@gmail.com>"]
readme = "README.md"

include = ["htbam_notebooks/*.ipynb"]
exclude = ["*"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
