[tool.poetry]
name = "htbam-notebooks"
version = "1.3.2"
description = ""
authors = ["Nicholas-Freitas <nicholas.freitas@ucsf.edu>", "duncan-muir <muir.duncan@gmail.com>"]
readme = "README.md"

include = ["htbam_notebooks/*.ipynb", "example_data/*"]
exclude = ["*"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
